test/nl/formats/verilog/benchmarks/errors/error15.v
/*
  Error: unsupported type in instance connection
*/

module test();
  assign n1 = "FOO";
endmodule